# rust-ws-playground

./: .gitignore  Cargo.toml  Procfile  app.py  main.rs
static/: index.html  index.js  main.css
